# takeout

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  todo
Example/: Ming - Chinese Restaurant Elementor Pro Template Kit Preview - ThemeForest.html
Example/Ming - Chinese Restaurant Elementor Pro Template Kit Preview - ThemeForest_files/: bc-v4.min.html  firasans.css  gtm.js.download  js  js(1)  maps.html  post-4.css  post-5.css  post-601.css  post-829.css  roboto.css  saved_resource(2).html  vt  vt(1)  vt(10)  vt(11)  vt(2)  vt(3)  vt(4)  vt(5)  vt(6)  vt(7)  vt(8)  vt(9)
apps/api/: Dockerfile  entrypoint.sh  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_add_google_places_fields.py  0002_menu_schema.py  0003_add_fetch_metros.py  0003_orders_schema.py  0004_template_and_order_modifiers.py  bc60a95d9f2a_add_website_audits.py  e6c4a1f9b2d7_merge_schema_heads.py
apps/api/app/: config.py  database.py  main.py
apps/api/app/models/: __init__.py  fetch_metro.py  location.py  menu.py  order.py  restaurant.py  slug.py  website_audit.py
apps/api/app/routers/: admin.py  admin_menus.py  browse.py  menus.py  orders.py  restaurants.py  search.py  sitemap.py
apps/api/app/schemas/: admin.py  browse.py  common.py  menu.py  order.py  restaurant.py
apps/api/app/services/: admin.py  browse.py  menu.py  order.py  restaurant.py  search.py
apps/api/scripts/: audit_websites.py  fetch_restaurants_google.py  import_restaurants.py  seed_menus.py
data/: sample_restaurants.csv
plan/: web_presence_mvp.md
(+940 files in other folders)
